change tmpl ext name and add ifname

--- a/config/cicada.conf.tmpl
+++ b/config/cicada.conf.tmpl
@@ -6,8 +6,12 @@ incoming = incoming
 storage = storage
 backup = backup
 http_port = 
+ifcmd = 
+ifdata = 
 
 [node1]
+ifcmd = 
+ifdata = 
 ip = 
 hostname =
 api_key =
@@ -18,6 +22,8 @@ backup = backup
 http_port = 
 
 [node2]
+ifcmd = 
+ifdata = 
 ip = 
 hostname = 
 api_key =
