no nodename when load_config

--- a/config/cicada.conf.tmpl
+++ b/config/cicada.conf.tmpl
@@ -2,9 +2,9 @@
 max_replica = 3
 nodes = node1 node2
 root = ~/cicada/data
-incoming = incoming
-storage = storage
-backup = backup
+incoming_path = incoming
+storage_path = storage
+backup_path = backup
 http_port = 
 ifcmd = 
 ifdata = 
@@ -15,9 +15,9 @@ ifdata =
 ip = 
 api_key =
 root = ~/cicada/data
-incoming = incoming
-storage = storage
-backup = backup
+incoming_path = incoming
+storage_path = storage
+backup_path = backup
 http_port = 
 
 [node2]
@@ -26,7 +26,7 @@ ifdata =
 ip = 
 api_key =
 root = ~/cicada/data
-incoming = incoming
-storage = storage
-backup = backup
+incoming_path = incoming
+storage_path = storage
+backup_path = backup
 http_port = 
