dataip and cmdip split

--- a/config/cicada.conf.tmpl
+++ b/config/cicada.conf.tmpl
@@ -10,9 +10,10 @@ ifcmd =
 ifdata = 
 
 [node1]
-ifcmd = 
-ifdata = 
-ip = 
+cmdif =
+dataif =
+cmdip =
+dataip =
 api_key =
 root = ~/cicada/data
 incoming_path = incoming
@@ -21,9 +22,10 @@ backup_path = backup
 http_port = 
 
 [node2]
-ifcmd = 
-ifdata = 
-ip = 
+cmdif =
+dataif =
+cmdip =
+dataip =
 api_key =
 root = ~/cicada/data
 incoming_path = incoming
